added login and signup modals

--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,10 @@
 </head>
 <body>
 
-    <div id="appContainer"></div>	
+    <div id="appContainer">
+	    <div id="pageContainer"></div>
+        <div id="modalContainer"></div>
+    </div>	
 
     <link rel="stylesheet" type="text/css" href="prod/prod.css">
     <script type="text/javascript" src="prod/prod.js"></script>
