--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,7 @@
     <div id="appContainer">
 	    <div id="pageContainer"></div>
         <div id="modalContainer"></div>
+        <div id="loaderContainer"></div>
     </div>	
 
     <link rel="stylesheet" type="text/css" href="prod/prod.css">
